syntax = "proto3";

package messages;

service MessageService {
  rpc sendMessage(Message) returns (Message);
  rpc getMessagesByUser(UserId) returns (MessageList);
  rpc joinChat(Empty) returns (stream MessageList);
  rpc leaveChat(Empty) returns (Empty);
}

message UserId {
  int32 senderId = 1;
  int32 receiverId = 2;
}

message Message {
  int32 id = 1;
  string text = 2;
  int32 senderId = 3;
  int32 receiverId = 4;
  string time = 5;
}

message MessageList {
  repeated Message messages = 1;
}

message Empty {}
